adaugare autentificare manager hr 2FA, adaugare notificari in aplicatie pentru managerul hr cand primeste cereri concediu, adaugare notificari pe mail pentru angajati la respingerea/aprobarea cererii de concediu